--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,31 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
+.hover-underline-animation {
+   display: inline-block;
+   position: relative;
+  display: flex;
+ }
+ 
+ .hover-underline-animation::after {
+   content: '';
+   position: absolute;
+   width: 100%;
+   transform: scaleX(0);
+   height: 2px;
+   bottom: 0;
+   left: 0;
+   background-color: rgb(56 189 248 );
+   transform-origin: bottom right;
+   transition: transform 0.30s ease-out;
+ }
+ 
+ .hover-underline-animation:hover::after {
+   transform: scaleX(1);
+   transform-origin: bottom left;
+ }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+ .wi{
+   width: 100%;
+ }
