--- a/app/globals.css
+++ b/app/globals.css
@@ -14,11 +14,11 @@
    position: absolute;
    width: 100%;
    transform: scaleX(0);
-   height: 2px;
+   height: 3px;
    bottom: 0;
    left: 0;
    background-color: rgb(56 189 248 );
-   transform-origin: bottom right;
+   /* transform-origin: bottom right; */
    transition: transform 0.30s ease-out;
  }
  
@@ -29,4 +29,8 @@
 
  .wi{
    width: 100%;
+ }
+ .list{
+  height: 100%;
+  width: 100%
  }
